// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/metadata-instance-editor/fields/TextField should correctly render a number field 1`] = `
<TextInput
  className="metadata-instance-editor-field-text"
  hideOptionalLabel={true}
  onChange={[Function]}
  type="number"
  value="value"
/>
`;

exports[`features/metadata-instance-editor/fields/TextField should correctly render a text field 1`] = `
<TextInput
  className="metadata-instance-editor-field-text"
  hideOptionalLabel={true}
  onChange={[Function]}
  type="text"
  value="value"
/>
`;

exports[`features/metadata-instance-editor/fields/TextField should correctly render a zero in a number field 1`] = `
<TextInput
  className="metadata-instance-editor-field-text"
  hideOptionalLabel={true}
  onChange={[Function]}
  type="number"
  value={0}
/>
`;
